class AuthService {
// TODO: Implement
}
