class WorkoutService {
  // TODO: Implement
}
