import 'package:flutter/material.dart';

class SplitCard extends StatelessWidget {
  final String name;
  final String description;

  const SplitCard({
    super.key,
    required this.name,
    required this.description,
  });

  @override
  Widget build(BuildContext context) {
    return const Card(
        // TODO: Implement
        );
  }
}
